--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <h3>Enter three lines to determine if they compose a haiku.</h3>
+  <h4>Please note: not all syllable exception cases are accounted for.</h4>
   <form id="haiku-checker-form">
     <label for="line1">Enter your first line: </label>
     <input id="line1" type="text" required>
@@ -18,6 +19,9 @@
     <input id="line3" type="text" required>
     <hr>
     <button type="submit">Submit</button>
+  </form>
+  <form id="haiku-generator-form">
+    <button type="submit">Random Generator!</button>
   </form>
   <div class="card">
     <ul id="response">
