clean up the project, update README.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
   <h3>Enter three lines to determine if they compose a haiku.</h3>
   <h4>Please note: not all syllable exception cases are accounted for.</h4>
+  <h4>Rules: the first line should contain 5 syllables, the second 7, the third 5.</h4>
   <form id="haiku-checker-form">
     <label for="line1">Enter your first line: </label>
     <input id="line1" type="text" required>
